# CPU-Scheduler-Simulator

./: README.md
cpu_scheduler_simulator/: CMakeLists.txt  README.md
cpu_scheduler_simulator/data/: README.md  sample_processes.csv
cpu_scheduler_simulator/data/invalid/: 01_empty_file.csv  02_negative_arrival.csv  03_zero_burst.csv  04_missing_field.csv  05_bad_integer.csv  06_duplicate_process_id.csv  07_negative_priority.csv
cpu_scheduler_simulator/data/valid/: 02_idle_cpu_gaps.csv  03_all_arrive_same_time_tie_breaking.csv  04_sjf_equal_burst_ties.csv  05_priority_equal_priority_ties.csv  06_deadline_boundary_cases.csv  07_round_robin_quantum_boundary.csv  08_single_process.csv  09_unsorted_input_arrivals.csv  10_round_robin_quantum_larger_than_bursts.csv  11_comments_and_whitespace.csv
cpu_scheduler_simulator/outputs/: 01_sample_mixed_workload.out  02_idle_cpu_gaps.out  03_all_arrive_same_time_tie_breaking.out  04_sjf_equal_burst_ties.out  05_priority_equal_priority_ties.out  06_deadline_boundary_cases.out  07_round_robin_quantum_boundary.out  08_single_process.out  09_unsorted_input_arrivals.out  10_round_robin_quantum_larger_than_bursts.out  11_comments_and_whitespace.out
cpu_scheduler_simulator/outputs/invalid/: 01_empty_file.out  02_negative_arrival.out  03_zero_burst.out  04_missing_field.out  05_bad_integer.out  06_duplicate_process_id.out  07_negative_priority.out
cpu_scheduler_simulator/scripts/: run_invalid_cases.sh  run_valid_cases.sh
cpu_scheduler_simulator/src/: main.cpp  scheduler.cpp  scheduler.h
